--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,9 @@ addons:
       - gcc-4.7
       - g++-4.7
 
+services:
+  - mongodb
+
 before_install:
   - git submodule update --init --recursive
   - git clone https://github.com/creationix/nvm.git ./.nvm
